--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "@types/react-dom": "18.0.11",
     "eslint": "^8.0.1",
     "eslint-config-next": "13.2.4",
+    "ethers": "^6.10.0",
     "next": "13.2.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "swiper": "^11.0.6",
     "typescript": "*"
   },
   "devDependencies": {
