--- a/ui-byt/package.json
+++ b/ui-byt/package.json
@@ -18,6 +18,7 @@
     "eslint-config-next": "13.2.4",
     "ethers": "^6.11.1",
     "next": "13.2.4",
+    "nprogress": "^0.2.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-scroll": "^1.9.0",
@@ -27,6 +28,7 @@
     "wagmi": "^2.5.7"
   },
   "devDependencies": {
+    "@types/nprogress": "^0.2.3",
     "@types/react-scroll": "^1.8.10",
     "@typescript-eslint/eslint-plugin": "^5.43.0",
     "autoprefixer": "^10.4.14",
