--- a/ui-byt/.env
+++ b/ui-byt/.env
@@ -1,2 +1,3 @@
 PROJECT_ID = 532c9d91c7f6a1282eb31e7f499c7404
-NEXT_PUBLIC_BASE_URL=http://localhost:5000
+# NEXT_PUBLIC_BASE_URL=http://localhost:5000
+NEXT_PUBLIC_BASE_URL=https://byt-marketplace.onrender.com
